Fixes for cache reading/safeing