@@ -23,19 +23,18 @@ import java.nio.file.Path;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
-import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javafx.application.Platform;
 import javafx.collections.ObservableList;
 import javafx.concurrent.Task;
 import javafx.scene.control.Label;
-import org.photoslide.ThreadFactoryBuilder;
 import org.photoslide.Utility;
 import org.photoslide.browsercollections.FilenameComparator;
 
@@ -55,6 +54,9 @@ public class MediaLoadingTask extends Task<MediaFile> {
     private final MediaFileLoader fileLoader;
     private ExecutorService executorParallel;
     private final int loadingLimit;
+    private List<MediaFile> cacheList;
+    private List<Thread> loadingThreads;
+    private boolean loadedFromCache;
 
     public MediaLoadingTask(ObservableList<MediaFile> fullMediaList, MediaGridCellFactory factory, Path sPath, MainViewController mainControllerParam, Label mediaQTYLabelParam, String sortParm, MetadataController metaControllerParam) {
         selectedPath = sPath;
@@ -65,7 +67,11 @@ public class MediaLoadingTask extends Task<MediaFile> {
         metadataController = metaControllerParam;
         this.factory = factory;
         this.fullMediaList = fullMediaList;
-        executorParallel = Executors.newCachedThreadPool(new ThreadFactoryBuilder().setPriority(8).setNamePrefix("lightTableControllerSelectionMediaLoading").build());
+        cacheList = new ArrayList<>();
+        loadingThreads = new ArrayList<>();
+        loadedFromCache = false;
+        executorParallel = Executors.newVirtualThreadPerTaskExecutor();
+        //executorParallel = Executors.newCachedThreadPool(new ThreadFactoryBuilder().setPriority(8).setNamePrefix("lightTableControllerSelectionMediaLoading").build());
         if (Utility.nativeMemorySize > 4194500) {
             loadingLimit = 75;
         } else {
@@ -76,30 +82,11 @@ public class MediaLoadingTask extends Task<MediaFile> {
     @Override
     protected MediaFile call() throws Exception {
         final long qty;
-        List<MediaFile> content = new ArrayList<>();
-        ArrayList<MediaFile> cacheList = new ArrayList<>();
         try {
 
             updateTitle("Reading cache...");
-            //restore cache            
             File inPath = new File(Utility.getAppData() + File.separatorChar + "cache" + File.separatorChar + createMD5Hash(selectedPath.toString()) + "-" + selectedPath.toFile().getName() + ".bin");
-            FileInputStream fileInputStream;
-            try {
-                fileInputStream = new FileInputStream(inPath);
-                ObjectInputStream objectInputStream
-                        = new ObjectInputStream(fileInputStream);
-                List<MediaFile> e2 = (ArrayList<MediaFile>) objectInputStream.readObject();
-                objectInputStream.close();
-                cacheList.addAll(e2);
-                Platform.runLater(() -> {
-                    factory.setListFilesActive(false);
-                    fullMediaList.addAll(cacheList);
-                    mainController.getProgressPane().setVisible(false);
-                    mainController.getStatusLabelLeft().setVisible(false);
-                    mainController.getStatusLabelRight().setVisible(false);
-                });
-            } catch (IOException | ClassNotFoundException ex) {
-            }
+            restoreCacheFromDisk(cacheList, inPath);
             updateTitle("Reading cache...finished");
 
             updateTitle("Counting mediafiles...");
@@ -110,9 +97,34 @@ public class MediaLoadingTask extends Task<MediaFile> {
 
             Stream<Path> fileListCount = Files.list(selectedPath).filter((t) -> {
                 return FileTypes.isValidType(t.getFileName().toString());
-            });
+            }).sorted(new FilenameComparator());
+
+            Stream<Path> finalFileList;
+            if (cacheList.isEmpty() == true) {
+                finalFileList = fileList;
+            } else {
+                List<Path> cacheListStream = cacheList.stream().map(MediaFile::getPathStorage).collect(Collectors.toList());
+                Stream<Path> diffFileList = fileList
+                        .filter(element -> !cacheListStream.contains(element));
+                //list of edit files                
+                long start = System.currentTimeMillis();
+                Stream<Path> editFileList = cacheList.stream().filter((t) -> {
+                    if (t != null) {
+                        if (!t.getFilterList().isEmpty()) {
+                            return true;
+                        }
+                    }
+                    return false;
+                }).map(MediaFile::getPathStorage);
+                finalFileList = Stream.concat(diffFileList, editFileList);
+                long end = System.currentTimeMillis();
+                loadedFromCache = true;
+                factory.setListFilesActive(false);
+                Logger.getLogger(MediaLoadingTask.class.getName()).log(Level.FINE, "Calculatiing difference between cache and disk took "+(end-start)/1000+"s");
+            }
 
             qty = fileListCount.count();
+
             updateTitle("Counting mediafiles...finished");
             if (qty == 0) {
                 updateTitle("0 mediafiles found.");
@@ -123,141 +135,138 @@ public class MediaLoadingTask extends Task<MediaFile> {
                 });
                 return null;
             } else {
-                if (!cacheList.isEmpty()) {
-                    Platform.runLater(() -> {
-                        mainController.getProgressPane().setVisible(false);
-                        mainController.getStatusLabelLeft().setVisible(false);
-                        mediaQTYLabel.setText(qty + " media files");
-                        mainController.getStatusLabelRight().setVisible(false);
-                    });
-                } else {
-                    Platform.runLater(() -> {
-                        mainController.getProgressPane().setVisible(true);
-                        mainController.getStatusLabelLeft().setVisible(true);
-                        mediaQTYLabel.setText(qty + " media files");
-                        mainController.getStatusLabelRight().setVisible(true);
-                    });
-                }
+                Platform.runLater(() -> {
+                    mainController.getProgressPane().setVisible(true);
+                    mainController.getStatusLabelLeft().setVisible(true);
+                    mediaQTYLabel.setText(qty + " media files");
+                    mainController.getStatusLabelRight().setVisible(true);
+                });
                 updateTitle(qty + " files found - Loading...");
             }
-            Logger.getLogger(LighttableController.class.getName()).log(Level.INFO, "Starting collecting..." + selectedPath);
+            Logger.getLogger(MediaLoadingTask.class.getName()).log(Level.INFO, "Starting collecting..." + selectedPath);
             long starttime = System.currentTimeMillis();
-
+            
             AtomicInteger iatom = new AtomicInteger(1);
-            if (qty != cacheList.size()+1) {
-                fileList.parallel().forEach((fileItem) -> {
-                    if (this.isCancelled()) {
-                        return;
-                    }
-                    if (this.isCancelled() == false) {
-                        if (Files.isDirectory(fileItem) == false) {
-                            if (FileTypes.isValidType(fileItem.toString())) {
-                                MediaFile m = new MediaFile();
-                                m.setName(fileItem.getFileName().toString());
-                                m.setPathStorage(fileItem);
-                                m.setMediaType(MediaFile.MediaTypes.IMAGE);
-                                if (fullMediaList.contains(m) == false) {
-                                    if (Utility.nativeMemorySize > 4194500) {
-                                        Thread.ofVirtual().start(() -> {
-                                            try {
-                                                loadItem(fileItem, m);
-                                                updateValue(m);
-                                            } catch (IOException ex) {
-                                                m.setMediaType(MediaFile.MediaTypes.NONE);
-                                            }
-                                        });
-                                    } else {
+            finalFileList.parallel().forEach((fileItem) -> {
+                if (this.isCancelled()) {
+                    return;
+                }
+                if (this.isCancelled() == false) {
+                    if (Files.isDirectory(fileItem) == false) {
+                        if (FileTypes.isValidType(fileItem.toString())) {                            
+                            MediaFile m = new MediaFile();
+                            m.setName(fileItem.getFileName().toString());
+                            m.setPathStorage(fileItem);
+                            m.setMediaType(MediaFile.MediaTypes.IMAGE);
+                            if (fullMediaList.contains(m) == false) {
+                                if (Utility.nativeMemorySize > 4194500) {
+                                    executorParallel.submit(() -> {
                                         try {
-                                            loadItem(fileItem, m);
+                                            loadItem(fileItem, m, Thread.currentThread());
                                             updateValue(m);
                                         } catch (IOException ex) {
                                             m.setMediaType(MediaFile.MediaTypes.NONE);
                                         }
-                                    }
+                                    });
                                 } else {
-                                    //calc hash and compare, if different load data from disk
-                                    // loaditem with check
-                                    fullMediaList.get(fullMediaList.indexOf(m)).readEdits();
+                                    try {
+                                        loadItem(fileItem, m, null);
+                                        updateValue(m);
+                                    } catch (IOException ex) {
+                                        m.setMediaType(MediaFile.MediaTypes.NONE);
+                                    }
                                 }
-                                if (cacheList.contains(m) == false) {
-                                    cacheList.add(m);
-                                }
+                            } else {
+                                fullMediaList.get(fullMediaList.indexOf(m)).readEdits();
                             }
-                        }
-                        if (cacheList.isEmpty()) {
-                            updateTitle("Loading..."+iatom.get() + " / " + qty);
-                        } else{
-                            updateTitle("Checking cache..."+iatom.get() + " / " + qty);
-                        }
-                        updateMessage(iatom.get() + " / " + qty);
-                        iatom.addAndGet(1);
-                        if (qty > 1000) {
-                            double percentage = (double) iatom.get() / qty * 100;
-                            if (percentage >= loadingLimit) {
-                                factory.setListFilesActive(false);
+                            if (cacheList.contains(m) == false) {
+                                cacheList.add(m);
                             }
                         }
                     }
-                });
-                if (this.isCancelled()) {
-                    return null;
+                    if (loadedFromCache == false) {
+                        updateTitle("Loading..." + iatom.get() + " / " + qty);
+                        updateMessage(iatom.get() + " / " + qty);
+                    } else {
+                        updateTitle("Checking cache..." + iatom.get());
+                        updateMessage(iatom.get()+"");
+                    }                    
+                    iatom.addAndGet(1);
                 }
-            } else {
-                //filter changed files and execute readEdits()
+            });
+            if (this.isCancelled()) {
+                return null;
             }
-            //save cache to disk            
+
+            //Save cache...
+            Thread.ofVirtual().start(() -> {
+                saveCacheToDisk();
+            });
+            long endtime = System.currentTimeMillis();
+            Logger.getLogger(MediaLoadingTask.class.getName()).log(Level.INFO, "Collect Time in s: " + (endtime - starttime) / 1000 + " " + selectedPath);
+        } catch (IOException ex) {
+            Logger.getLogger(MediaLoadingTask.class.getName()).log(Level.SEVERE, null, ex);
+        }
+        return null;
+    }
+
+    private void restoreCacheFromDisk(List<MediaFile> cacheList, File inPath) throws NoSuchAlgorithmException {
+        //restore cache        
+        FileInputStream fileInputStream;
+        try {
+            fileInputStream = new FileInputStream(inPath);
+            ObjectInputStream objectInputStream
+                    = new ObjectInputStream(fileInputStream);
+            List<MediaFile> e2 = (ArrayList<MediaFile>) objectInputStream.readObject();
+            objectInputStream.close();
+            cacheList.addAll(e2);
+            Platform.runLater(() -> {
+                fullMediaList.addAll(cacheList);
+            });
+        } catch (IOException | ClassNotFoundException ex) {
+            inPath.delete();
+        }
+    }
+
+    public void saveCacheToDisk() {
+        updateMessage("Saving cache...");
+        try {
+            //save cache to disk
             File outpath = new File(Utility.getAppData() + File.separatorChar + "cache" + File.separatorChar + createMD5Hash(selectedPath.toString()) + "-" + selectedPath.toFile().getName() + ".bin");
+            long start = System.currentTimeMillis();
+            executorParallel.close();
 
             FileOutputStream fileOutputStream;
             try {
                 fileOutputStream = new FileOutputStream(outpath, false);
                 ObjectOutputStream objectOutputStream
-                        = new ObjectOutputStream(fileOutputStream);
-                updateTitle("Save cache..." + cacheList.size());
+                        = new ObjectOutputStream(fileOutputStream);                
+                updateMessage("Save cache...Writing to disk");
                 objectOutputStream.writeObject(cacheList);
                 objectOutputStream.flush();
                 objectOutputStream.close();
-                updateTitle("Save cache...finished.");
+                updateMessage("Save cache...finished");
             } catch (FileNotFoundException ex) {
-                Logger.getLogger(LighttableController.class.getName()).log(Level.SEVERE, null, ex);
+                Logger.getLogger(MediaLoadingTask.class.getName()).log(Level.SEVERE, null, ex);
             } catch (IOException ex) {
-                Logger.getLogger(LighttableController.class.getName()).log(Level.SEVERE, null, ex);
+                Logger.getLogger(MediaLoadingTask.class.getName()).log(Level.SEVERE, null, ex);
             }
+            long end = System.currentTimeMillis();
+            Platform.runLater(() -> {
+                new Utility().hideNodeAfterTime(mainController.getStatusLabelRight(), 2, true);
+            });
+            Logger.getLogger(MediaLoadingTask.class.getName()).log(Level.INFO, "Save to disk took " + (end - start) / 1000 + "s");
             //end save to disk
-
-            long endtime = System.currentTimeMillis();
-            Logger.getLogger(LighttableController.class.getName()).log(Level.INFO, "Collect Time in s: " + (endtime - starttime) / 1000 + " " + selectedPath);
-        } catch (IOException ex) {
-            Logger.getLogger(LighttableController.class.getName()).log(Level.SEVERE, null, ex);
+        } catch (NoSuchAlgorithmException ex) {
+            Logger.getLogger(MediaLoadingTask.class.getName()).log(Level.SEVERE, null, ex);
         }
-        switch (sort) {
-            case "filename":
-                Comparator<MediaFile> comparing2 = Comparator.comparing((MediaFile t) -> {
-                    return t.getName();
-                });
-                content.sort(comparing2);
-                break;
-            case "File creation time":
-                Comparator<MediaFile> comparing = Comparator.comparing((MediaFile t) -> {
-                    try {
-                        return t.getCreationTime();
-                    } catch (IOException ex) {
-                        Logger.getLogger(MediaLoadingTask.class.getName()).log(Level.SEVERE, null, ex);
-                    }
-                    return null;
-                });
-                content.sort(comparing);
-                break;
-
-        }
-        return null;
+        //end save to disk
     }
 
-    public void loadItem(Path fileItem, MediaFile m) throws IOException {
+    public void loadItem(Path fileItem, MediaFile m, Thread th) throws IOException {
         if (this.isCancelled()) {
             return;
         }
-        //TODO: load in background or load during real media loading to speed up
         m.readEdits();
         if (this.isCancelled()) {
             return;
@@ -297,6 +306,9 @@ public class MediaLoadingTask extends Task<MediaFile> {
             }
         } else {
             m.setMediaType(MediaFile.MediaTypes.NONE);
+        }
+        if (th != null) {
+            loadingThreads.remove(th);
         }
     }
 
